Prevent the navbar from scrolling out of the viewport

--- a/www/style/main.less
+++ b/www/style/main.less
@@ -109,12 +109,34 @@ div#navBar
 {
 	position: absolute;
 	left: 0;
-	right: 0;
+	width: 100%;
 	top: 200px;
 	height: 40px;
-	padding: 0 0 0 330px;
+	padding: 0;
 	background-color: #333;
 	z-index: 500;
+
+	.title
+	{
+		display: inline-block;
+		width: 330px;
+		height: 38px;
+		line-height: 38px;
+		color: transparent;
+		text-align: left;
+		font-style: italic;
+	}
+
+	&.fixed
+	{
+		position: fixed;
+		top: 0;
+
+		.title
+		{
+			color: white;
+		}
+	}
 	
 	.background-image(linear-gradient(to bottom, #555555 0%, #000000 70%, #333333 100%));
 	
@@ -123,7 +145,7 @@ div#navBar
 	border: 1px outset #555;
 	border-left: 0;
 	border-right: 0;
-	
+		
 	.item
 	{
 		display: inline-block;
@@ -139,7 +161,7 @@ div#navBar
 
 		&:hover
 		{
-			background-color: rgba(0, 128, 255, 0.3);
+			background-color: rgba(0, 128, 255, 0.6);
 			color: white;
 		}
 
